log
Thu 28 Mar 2024 09:31:34 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1a13b5e
Thu 28 Mar 2024 09:37:43 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0e30da6
Thu 28 Mar 2024 09:42:52 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eb88219
Thu 28 Mar 2024 09:45:06 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4413eae
Thu 28 Mar 2024 09:58:59 PM UTC: 
 list.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
7e42d71
Thu 28 Mar 2024 09:59:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
92d4633
Thu 28 Mar 2024 10:00:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f179b7d
Thu 28 Mar 2024 10:01:28 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
b9ffa11
Thu 28 Mar 2024 10:04:35 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 15/70
523af0d
Thu 28 Mar 2024 10:07:55 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
43789dc
Thu 28 Mar 2024 10:10:56 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
c3ebaae
Thu 28 Mar 2024 10:15:34 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
6308170
Thu 28 Mar 2024 10:16:29 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
96157a7
Thu 28 Mar 2024 10:21:27 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
22c876e
Thu 28 Mar 2024 10:22:28 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
5890492
Thu 28 Mar 2024 10:29:48 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
1976d1e
Thu 28 Mar 2024 10:30:57 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
3e90ec3
Thu 28 Mar 2024 10:32:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
067dd68
Thu 28 Mar 2024 10:36:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
00d2cdb
Thu 28 Mar 2024 10:37:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7dcbcb3
Thu 28 Mar 2024 10:39:12 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
139a6ad
Thu 28 Mar 2024 10:39:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d9e7628
Thu 28 Mar 2024 10:41:57 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
c568df7
Thu 28 Mar 2024 10:42:58 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 25/70
0c9865e
Thu 28 Mar 2024 10:47:51 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 25/70
1754220
Thu 28 Mar 2024 10:49:18 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  7|4
total_score: 25/70
33b7ff5
Thu 28 Mar 2024 10:50:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
ab7891b
Thu 28 Mar 2024 10:53:40 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|4
total_score: 25/70
d030532
Thu 28 Mar 2024 10:54:42 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  7|4
total_score: 25/70
dc317cb
Thu 28 Mar 2024 10:55:43 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
cd9b38c
Thu 28 Mar 2024 11:04:15 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
940f98c
Thu 28 Mar 2024 11:06:18 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
be4e432
Thu 28 Mar 2024 11:06:32 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
5b1b9ac
Thu 28 Mar 2024 11:33:10 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2cf7e93
Thu 28 Mar 2024 11:34:05 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
a8dd2ca
Thu 28 Mar 2024 11:35:36 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0a48728
Thu 28 Mar 2024 11:36:16 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
25e40f0
Thu 28 Mar 2024 11:39:55 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
f3f4cc3
Thu 28 Mar 2024 11:43:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
c5637c7
Thu 28 Mar 2024 11:47:12 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
0ef10f7
Thu 28 Mar 2024 11:47:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:79:14: error: assignment to ‘Node *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   79 |   list->head = list;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
dd2257e
Thu 28 Mar 2024 11:50:05 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
1944b7a
Thu 28 Mar 2024 11:53:10 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
6e3efe3
Thu 28 Mar 2024 11:53:32 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2a671c5
Thu 28 Mar 2024 11:58:19 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
422deb8
Thu 28 Mar 2024 11:58:37 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
fee7069
Fri 29 Mar 2024 12:00:24 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
56c07a3
Fri 29 Mar 2024 12:00:42 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
aa13b2c
Fri 29 Mar 2024 12:01:10 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
822b9a7
Fri 29 Mar 2024 12:01:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e804a71
Fri 29 Mar 2024 12:01:34 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
a9fff0c
Fri 29 Mar 2024 12:03:01 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
e124ffb
Fri 29 Mar 2024 12:04:00 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
684292b
Fri 29 Mar 2024 12:04:24 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
1c38b49
Fri 29 Mar 2024 07:42:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
376494d
Fri 29 Mar 2024 07:43:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
375695c
Fri 29 Mar 2024 07:46:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3ddcb1d
Fri 29 Mar 2024 07:46:47 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
130921a
Fri 29 Mar 2024 07:47:46 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
9383c13
Fri 29 Mar 2024 07:48:11 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
b4fd6b5
Fri 29 Mar 2024 07:59:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
155496f
Fri 29 Mar 2024 08:01:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
e9dcde9
